# bank-scrapper

./: .gitignore  main.py  properties.example.ini  pyproject.toml
