[tool.poetry]
name = "itau-scrapper"
version = "0.1.0"
description = ""
authors = ["Sonny Marinho <sonny.marinho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
MechanicalSoup = "^1.1.0"
selenium = "^4.1.5"
webdriver-manager = "^3.5.4"
configparser = "^5.2.0"
Js2Py = "^0.71"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
